@@ -3,6 +3,7 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann. GPL License.
 
 
+  * fix: ExpandButton submenu now slightly delayed
   * fix: dropping items into playlist
   * add: drop-target indicator line in PlaylistWidget, providing visual feedback
   * add: tray menu
